--- a/src/app/styles/hoverButton.css
+++ b/src/app/styles/hoverButton.css
@@ -7,7 +7,7 @@
   border-radius: 0.5em;
   border: none;
   background-color: #000;
-  color: #a16207;
+  color: #f1c32bf3;
   cursor: pointer;
   box-shadow: 2px 2px 3px #000000b4;
 }
